; ModuleID = '/home/carl/AnghaBench/freebsd/cddl/compat/opensolaris/lib/libumem/extr_umem.c_umem_cache_free.c'
source_filename = "/home/carl/AnghaBench/freebsd/cddl/compat/opensolaris/lib/libumem/extr_umem.c_umem_cache_free.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_3__ = type { i32, i32 (i8*, i32)* }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @umem_cache_free(%struct.TYPE_3__* %0, i8* %1) #0 {
  %3 = alloca %struct.TYPE_3__*, align 8
  %4 = alloca i8*, align 8
  store %struct.TYPE_3__* %0, %struct.TYPE_3__** %3, align 8
  store i8* %1, i8** %4, align 8
  %5 = load %struct.TYPE_3__*, %struct.TYPE_3__** %3, align 8
  %6 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %5, i32 0, i32 1
  %7 = load i32 (i8*, i32)*, i32 (i8*, i32)** %6, align 8
  %8 = icmp ne i32 (i8*, i32)* %7, null
  br i1 %8, label %9, label %18

9:                                                ; preds = %2
  %10 = load %struct.TYPE_3__*, %struct.TYPE_3__** %3, align 8
  %11 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %10, i32 0, i32 1
  %12 = load i32 (i8*, i32)*, i32 (i8*, i32)** %11, align 8
  %13 = load i8*, i8** %4, align 8
  %14 = load %struct.TYPE_3__*, %struct.TYPE_3__** %3, align 8
  %15 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %14, i32 0, i32 0
  %16 = load i32, i32* %15, align 8
  %17 = call i32 %12(i8* %13, i32 %16)
  br label %18

18:                                               ; preds = %9, %2
  %19 = load i8*, i8** %4, align 8
  %20 = call i32 @free(i8* %19)
  ret void
}

declare dso_local i32 @free(i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
